--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="hamburger">
             <input id="menu__toggle" type="checkbox" />
             <label for="menu__toggle" class="hamburger">
-              <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#fff" class="bi bi-list" viewBox="0 0 16 16">
+              <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#fff" class="bi bi-list" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
               </svg>
             </label>
@@ -240,7 +240,7 @@
                   <div class="accordion">
                     <div class="tab">
                       <input type="checkbox" name="accordion-1" id="cb1" />
-                      <label for="cb1" class="tab__label"> How many days does it take to develop a project? </label>
+                      <label for="cb1" class="tab__label"> What is the budget for the project? </label>
                       <svg class="arrow-icon" width="16" height="16" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 1L5 5L1 9" stroke="#fff" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"></path>
                       </svg>
