--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DeveloperYasir</title>
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="DeveloperYasir" />
+    <meta property="og:title" content="w-developer-logo-header-1.svg" />
+    <meta property="og:url" content="https://yasirmalik001.github.io/portfolio-website/" />
+    <meta name="description" content="full stack developer Yasir portfolio website" />
+    <meta name="keywords" content="Web Developer, Portfolio, Yasir, website" />
+    <meta name="author" content="Yasir Malik" />
+    <meta http-equiv="refresh" content="30" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js" integrity="sha512-Ysw1DcK1P+uYLqprEAzNQJP+J4hTx4t/3X2nbVwszao8wD+9afLjBQYjz7Uk4ADP+Er++mJoScI42ueGtQOzEA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
