--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>DeveloperYasir</title>
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="DeveloperYasir" />
-    <meta property="og:title" content="w-developer-logo-header-1.svg" />
+    <meta property="og:title" content="Web Developer Yasir" />
+    <meta property="og:image" content="assets/apple-face.png" />
     <meta property="og:url" content="https://yasirmalik001.github.io/portfolio-website/" />
     <meta name="description" content="full stack developer Yasir portfolio website" />
     <meta name="keywords" content="Web Developer, Portfolio, Yasir, website" />
