--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta name="keywords" content="Web Developer, Portfolio, Yasir, website" />
     <meta name="author" content="Yasir Malik" />
     <meta http-equiv="refresh" content="30" />
+    <link rel="stylesheet" type="text/css" href="fonts/Gilroy-Medium.ttf" />
+    <link rel="preload" as="font" type="font/ttf" href="fonts/Gilroy-Medium.ttf" crossorigin />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js" integrity="sha512-Ysw1DcK1P+uYLqprEAzNQJP+J4hTx4t/3X2nbVwszao8wD+9afLjBQYjz7Uk4ADP+Er++mJoScI42ueGtQOzEA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
