--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DeveloperYasir</title>
     <meta property="og:locale" content="en_US" />
-    <meta property="og:site_name" content="DeveloperYasir" />
+    <meta property="og:site_name" content="Developer Yasir" />
     <meta property="og:title" content="Web Developer Yasir" />
     <meta property="og:image" content="assets/apple-face.png" />
     <meta property="og:url" content="https://yasirmalik001.github.io/portfolio-website/" />
@@ -20,13 +20,14 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css" />
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script src="script.js" defer></script>
   </head>
   <body>
     <div class="circle__up">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#777"><path d="M12 11.8284L9.17154 14.6569L7.75732 13.2426L12 9L16.2426 13.2426L14.8284 14.6569L12 11.8284Z"></path></svg>
+      <svg class="circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 11.8284L9.17154 14.6569L7.75732 13.2426L12 9L16.2426 13.2426L14.8284 14.6569L12 11.8284Z"></path></svg>
     </div>
     <div class="main">
       <header>
@@ -46,6 +47,7 @@
               <li class="apply">apply now</li>
             </ul>
           </nav>
+
           <div class="hamburger">
             <input id="menu__toggle" type="checkbox" />
             <label for="menu__toggle" class="hamburger">
